connect with me is working

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 /* Video by Frank Cone from Pexels */
 /* used https://getavataaars.com/ */
+/* Attributions from FlatIcon: 
+Twitter icons created by Pixel Perfect
+Linkedin icons created by Pixel Perfect 
+Github icons created by Pixel Perfect */
+
 /* Colors */
 :root{
 --old-mauve: hsla(339, 54%, 28%, 1);
