--- a/src/views/Page/Contact.module.css
+++ b/src/views/Page/Contact.module.css
@@ -11,7 +11,6 @@
     height:500px;
     padding: 20px;
     margin: 20px;
-    
     justify-content: center;
     display: flex;
     background-image:linear-gradient(to bottom right, rgba(190, 255, 215, 0.356), rgba(177, 8, 8, 0));
@@ -20,16 +19,7 @@
     flex-direction: column;
     align-items: center;
 }
-.contact{  
-    color: var(--camel);
-    width: 100%;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    
-}
+ 
 .connect{  
     color: var(--camel);
     width: 100%;
@@ -41,6 +31,17 @@
     
 }
 
+.logoContainer{
+    display: flex;
+    justify-content: space-between;
+    width: 600px;
+}
+.logo{
+    height: 120px;
+    width: 120px;
+    padding: 10px;
+}
+
 .buttonContainer{
     display: flex;
     justify-content: space-between;
@@ -48,7 +49,6 @@
 }
 
 button{
-    
     height: 50px;
     width: 100px;
     color:var(--old-mauve);
