--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -14,14 +14,14 @@
     margin: 20px;
     justify-content: center;
     display: flex;
-    background-image:linear-gradient(to bottom right, rgba(190, 255, 215, 0.356), rgba(177, 8, 8, 0));
+    background-image:linear-gradient(to bottom right, var(--cadet-blue), rgba(177, 8, 8, 0));
     backdrop-filter: "blur(10px)";
     box-shadow: 10px 10px 10px rgba(30,30,30,0.5);
     flex-direction: column;
     align-items: center;
 }
 .name{  
-    color: var(--camel);
+    color: var(--baby-powder);
     width: 100%;
     padding-bottom: -10px;
     display: flex;
@@ -31,7 +31,7 @@
     
 }
 .bio{
-    color: var(--camel);
+    color: var(--light-coral);
     width: 50%;
     padding-bottom: 15px;
     display: flex;
@@ -55,11 +55,11 @@ button{
     
     height: 50px;
     width: 100px;
-    color:var(--old-mauve);
-    background-color: var(--persian-green);
+    color:var(--persian-plum);
+    background-color: var(--satin-sheen-gold);
 }
 button:hover{
-    color: var(--persian-green);
-    background-color: var(--old-mauve);
+    color: var(--satin-sheen-gold);
+    background-color: var(--persian-plum);
     cursor: pointer;
 }
