--- a/src/views/Page/Contact.module.css
+++ b/src/views/Page/Contact.module.css
@@ -13,7 +13,7 @@
     margin: 20px;
     justify-content: center;
     display: flex;
-    background-image:linear-gradient(to bottom right, rgba(190, 255, 215, 0.356), rgba(177, 8, 8, 0));
+    background-image:linear-gradient(to bottom right, var(--cadet-blue), rgba(177, 8, 8, 0));
     backdrop-filter: "blur(10px)";
     box-shadow: 10px 10px 10px rgba(30,30,30,0.5);
     flex-direction: column;
@@ -21,7 +21,7 @@
 }
  
 .connect{  
-    color: var(--camel);
+    color: var(--baby-powder);
     width: 100%;
     padding: 10px;
     display: flex;
@@ -51,11 +51,11 @@
 button{
     height: 50px;
     width: 100px;
-    color:var(--old-mauve);
-    background-color: var(--persian-green);
+    color:var(--persian-plum);
+    background-color: var(--satin-sheen-gold);
 }
 button:hover{
-    color: var(--persian-green);
-    background-color: var(--old-mauve);
+    color: var(--satin-sheen-gold);
+    background-color: var(--persian-plum);
     cursor: pointer;
 }
