--- a/src/views/Page/Experience.module.css
+++ b/src/views/Page/Experience.module.css
@@ -12,7 +12,7 @@
     margin: 20px;
     justify-content: center;
     display: flex;
-    background-image:linear-gradient(to bottom right, rgba(190, 255, 215, 0.356), rgba(177, 8, 8, 0));
+    background-image:linear-gradient(to bottom right, var(--cadet-blue), rgba(177, 8, 8, 0));
     backdrop-filter: "blur(10px)";
     box-shadow: 10px 10px 10px rgba(30,30,30,0.5);
     flex-direction: row;
@@ -29,7 +29,7 @@
     
 }
 .work{
-    color: var(--camel);
+    color: var(--sky-blue);
     width: 100%;
     padding: 10px;
     display: flex;
@@ -38,7 +38,7 @@
     justify-content: left;
 }
 .date{
-    color: var(--old-mauve);
+    color: var(--light-coral);
     width: 100%;
     padding-left: 40px;
     display: flex;
@@ -47,7 +47,7 @@
     justify-content: left;
 }
 .info{
-    color: var(--old-mauve);
+    color: var(--honeydew);
     width: 100%;
     padding-left: 40px;
     display: flex;
@@ -72,10 +72,10 @@ button{
     height: 50px;
     width: 100px;
     color:var(--old-mauve);
-    background-color: var(--persian-green);
+    background-color: var(--satin-sheen-gold);
 }
 button:hover{
-    color: var(--persian-green);
+    color: var(--satin-sheen-gold);
     background-color: var(--old-mauve);
     cursor: pointer;
 }
