--- a/src/views/Page/Portfolio.module.css
+++ b/src/views/Page/Portfolio.module.css
@@ -12,7 +12,7 @@
     margin: 20px;
     justify-content: center;
     display: flex;
-    background-image:linear-gradient(to bottom right, rgba(190, 255, 215, 0.356), rgba(177, 8, 8, 0));
+    background-image:linear-gradient(to bottom right, var(--cadet-blue), rgba(177, 8, 8, 0));
     backdrop-filter: "blur(10px)";
     box-shadow: 10px 10px 10px rgba(30,30,30,0.5);
     flex-direction: column;
@@ -28,7 +28,7 @@
     justify-content: center;
 }
 .header{  
-    color: var(--camel);
+    color: var(--sky-blue);
     width: 100%;
     padding: 10px;
     display: flex;
@@ -38,7 +38,7 @@
     
 }
 .app{
-    color: var(--old-mauve);
+    color: var(--light-coral);
     width: 100%;
     padding-left: 40px;
     display: flex;
@@ -62,11 +62,24 @@
 button{
     height: 50px;
     width: 100px;
-    color:var(--old-mauve);
-    background-color: var(--persian-green);
+    color:var(--persian-plum);
+    background-color: var(--satin-sheen-gold);
+    border-radius: 50px;
 }
 button:hover{
-    color: var(--persian-green);
-    background-color: var(--old-mauve);
+    color: var(--satin-sheen-gold);
+    background-color: var(--persian-plum);
     cursor: pointer;
 }
+a{
+    color: var(--baby-powder)
+  }
+  a:hover{
+  color: var(--satin-sheen-gold)
+  }
+  a:visited{
+    color: var(--persian-plum)
+  }
+  a:active{
+    color: var(--sky-blue)
+  }
