--- a/src/views/Page/Experience.module.css
+++ b/src/views/Page/Experience.module.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 200px) and (max-width:3800px){
 .container{
     display: flex;
     align-items: center;
@@ -78,4 +79,5 @@ button:hover{
     color: var(--satin-sheen-gold);
     background-color: var(--old-mauve);
     cursor: pointer;
+}
 }
