--- a/src/views/Page/Portfolio.module.css
+++ b/src/views/Page/Portfolio.module.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 200px) and (max-width:3800px){
 .container{
     display: flex;
     align-items: center;
@@ -83,3 +84,4 @@ a{
   a:active{
     color: var(--sky-blue)
   }
+}
