--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,30 @@ Github icons created by Pixel Perfect */
 }
 /* Font */
  
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 
 body{
   background-color: var(--oxford-blue);
 }
+
+/* .frost{
+    z-index: 9999;
+    width: 80%;
+    max-width: 900px;
+    height:80%;
+    display: flex;
+    justify-content: center;
+    background-image:linear-gradient(to bottom right, var(--cadet-blue), rgba(177, 8, 8, 0));
+    backdrop-filter: "blur(10px)";
+    box-shadow: 10px 10px 10px rgba(30,30,30,0.5);
+    flex-direction: column;
+    align-items: center;
+} */
 
 /* header{
   z-index: 9999;
