--- a/src/views/Page/Contact.module.css
+++ b/src/views/Page/Contact.module.css
@@ -49,7 +49,7 @@
     width: 400px;
 }
 
-button{
+/* button{
     height: 50px;
     width: 100px;
     color:var(--persian-plum);
@@ -59,5 +59,5 @@ button:hover{
     color: var(--satin-sheen-gold);
     background-color: var(--persian-plum);
     cursor: pointer;
-}
+} */
 }
