--- a/src/views/Page/Experience.module.css
+++ b/src/views/Page/Experience.module.css
@@ -68,7 +68,7 @@
     padding-top: 15px;
 }
 
-button{
+/* button{
     
     height: 50px;
     width: 100px;
@@ -79,5 +79,5 @@ button:hover{
     color: var(--satin-sheen-gold);
     background-color: var(--old-mauve);
     cursor: pointer;
-}
+} */
 }
