--- a/src/views/Page/Portfolio.module.css
+++ b/src/views/Page/Portfolio.module.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 200px) and (max-width:3800px){
-.container{
+/* .container{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,7 +18,8 @@
     box-shadow: 10px 10px 10px rgba(30,30,30,0.5);
     flex-direction: column;
     align-items: center;
-}
+} */
+
 .title{
     color: var(--baby-powder);
     width: 100%;
@@ -53,12 +54,12 @@
     width: 600px;
     padding: 10px;
 }
-.buttonContainer{
+/* .buttonContainer{
     display: flex;
     justify-content: space-between;
     width: 400px;
     padding-top: 15px;
-}
+} */
 
 /* button{
     height: 50px;
